--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
         </main>
        
         <footer>
-            <div id="banner">2019 <span>JUNE 21,</span> 2019 <span>JUNE 21 …….</span> </div>
+            <div id="banner">
+                <p>
+                2019 <span>JUNE 21,</span> 2019 <span>JUNE 21 …….</span></p> </div>
             <article>
                 <div>
                     <h6>Join us </h6>
