--- a/index.html
+++ b/index.html
@@ -64,6 +64,25 @@
                     <img src="assets/img/action7.jpeg" alt="">
                 </div>   
             </section>
+            <!-- for Tablett -->
+            <section class="action2">
+                <article>
+                    <h3>Stuck in the middle. </h3>
+                    <div>
+                        <p>Surrounded by smoke and inspired by the communities’ resilience, our design team reimagined the California Grizzly and used it to create custom tees, pins and posters.</p>
+                        <p>Our t-shirts (kids and adult sizes), pins, and posters will be available for purchase at our exclusive pop-up shop during our SF Design Week Studio Crawl this Friday, June 21. You can choose what amount to donate. All proceeds will go to the American Red Cross to help the communities that are still displaced.</p>
+                    </div>
+                </article>
+                <div class="B">
+                    <img src="assets/img/action1.jpeg" alt="">
+                    <img src="assets/img/action2.jpeg" alt=""> 
+                    <img src="assets/img/action3.jpeg" alt="">   
+                    <img src="assets/img/action4.jpeg" alt="">
+                    <img src="assets/img/action5.jpeg" alt="">
+                    <img src="assets/img/action6.jpeg" alt="">
+                    <img src="assets/img/action7.jpeg" alt="">
+                </div>
+            </section>
             <!-- bear -->
             <section class="bear">
                 <article>
